scripts/docker-deployment/unused/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: health-checker-service
              servicePort: 80
            path: /(.*)
          - backend:
              serviceName: elk-service
              servicePort: 80
            path: /kibana(/|$)(.*)
